; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_ps3_audio.c_ps3_audio_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_ps3_audio.c_ps3_audio_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ps3_audio_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ps3_audio_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %4, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = call i32 @ps3_audio_start(%struct.TYPE_4__* %9, i32 0)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 6
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @sys_ppu_thread_join(i32 %13, i32* %3)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = call i32 @ps3_audio_stop(%struct.TYPE_4__* %15)
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 5
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @cellAudioPortClose(i32 %19)
  %21 = call i32 (...) @cellAudioQuit()
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 4
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @fifo_free(i32 %24)
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 3
  %28 = call i32 @sys_lwmutex_destroy(i32* %27)
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 2
  %31 = call i32 @sys_lwmutex_destroy(i32* %30)
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 1
  %34 = call i32 @sys_lwcond_destroy(i32* %33)
  %35 = load i8*, i8** %2, align 8
  %36 = call i32 @free(i8* %35)
  ret void
}

declare dso_local i32 @ps3_audio_start(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @sys_ppu_thread_join(i32, i32*) #1

declare dso_local i32 @ps3_audio_stop(%struct.TYPE_4__*) #1

declare dso_local i32 @cellAudioPortClose(i32) #1

declare dso_local i32 @cellAudioQuit(...) #1

declare dso_local i32 @fifo_free(i32) #1

declare dso_local i32 @sys_lwmutex_destroy(i32*) #1

declare dso_local i32 @sys_lwcond_destroy(i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
